# FFAST

./: .gitconfig  .gitignore  Makefile  README.md  tobuild.txt
VMU931/: .gitignore  CMakeLists.txt  Makefile
VMU931/cmake/: pods.cmake
VMU931/include/: vmu.hpp  vmu_utils.h  vmu_utils.hpp
VMU931/lcmtypes/: data_h.lcm  data_imu.lcm  data_xyz.lcm
VMU931/lcmtypes/c/lcmtypes/: VMU931.h
VMU931/lcmtypes/cpp/lcmtypes/: VMU931.hpp
VMU931/src/: listener.c  main.cpp  vmu.cpp  vmu_utils.cpp
catkin_ws/: .gitignore  README.md
catkin_ws/launch/: ffast.launch
catkin_ws/src/ffast/: CMakeLists.txt  package.xml
catkin_ws/src/ffast/launch/: ffast.launch
catkin_ws/src/ffast/map/: basement.yaml  basement_center.yaml  basement_mrsd.yaml  basement_staircase.yaml  mechatronics_lab.yaml
catkin_ws/src/ffast_urdf/: CMakeLists.txt  package.xml
catkin_ws/src/ffast_urdf/launch/: display.launch  gazebo.launch
catkin_ws/src/ffast_urdf/robots/: ffast_urdf.urdf
catkin_ws/src/hardware/hardware/: CMakeLists.txt  camera_info.ini  hardware.launch  package.xml  vehicle_params.yaml
catkin_ws/src/hardware/hardware/config/: vehicle_params.yaml  vesc_driver.yaml
catkin_ws/src/hardware/jetson_gpio/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/teensy/teensy/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/teensy/teensy/src/: CMakeLists.txt  blink.cpp  lookup.h  main.cpp  main_with_tf.cpp  vehicle.cpp  vehicle.h
catkin_ws/src/hardware/teensy/teensy/src/OLD/: blink.cpp  teensy_with_tf.cpp  teensy_without_tf.cpp  vehicle.cpp  vehicle.h
catkin_ws/src/hardware/tf_broadcaster/: CMakeLists.txt  package.xml  predict_slip.yaml
catkin_ws/src/hardware/vesc/vesc_interface/: CMakeLists.txt  package.xml  vesc_interface.yaml
catkin_ws/src/hardware/vesc/vesc_interface/include/vesc_interface/: cmd_publisher.h  multiplexer.h  odom_publisher.h
catkin_ws/src/hardware/vesc/vesc_interface/src/: cmd_publisher.cpp  cmd_publisher_node.cpp  multiplexer.cpp  multiplexer_node.cpp  odom_publisher.cpp  odom_publisher_node.cpp  vesc_interface_node.cpp
catkin_ws/src/hardware/vmu931/: CMakeLists.txt  package.xml
catkin_ws/src/laser_scan_matcher/: CMakeLists.txt  package.xml
catkin_ws/src/planning/ilqr_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/planning/ilqr_msgs/msg/: IlqrInput.msg  IlqrOutput.msg  State.msg
catkin_ws/src/robot_pose_ekf/: robot_pose_ekf.launch
catkin_ws/src/send_cmd/: CMakeLists.txt  package.xml
catkin_ws/src/sysid/: CMakeLists.txt  package.xml
catkin_ws/src/teensy/: CMakeLists.txt  package.xml
catkin_ws/src/teensy/src/: CMakeLists.txt  main.cpp
catkin_ws/src/teensy/teensy/: CMakeLists.txt  package.xml
catkin_ws/src/teensy/teensy/msg/: Command.msg  Feedback.msg
catkin_ws/src/teensy/teensy/src/: main.cpp  vehicle.cpp  vehicle.h
catkin_ws/src/teensy/teensy/src/OLD/: lookup.h
catkin_ws/src/tf_broadcaster/: CMakeLists.txt  package.xml
catkin_ws/src/tf_publisher/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/user_interface/: CMakeLists.txt  package.xml
catkin_ws/src/vmu931/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
doc/: 99-usb-serial.rules  bill of materials.xlsx  dependencies.md  remote_connection.md  setup_instructions.md  test_runs.md  vesc_setup.md
doc/RC car power distribution board/: DESCRIPTION  eagle.epf  untitled.brd  untitled.sch
doc/dxf files/: bottom plate.DXF  top plate.DXF
lidar/: CMakeLists.txt  README
lidar/lcmtypes/: data_scan.lcm
lidar/lcmtypes/c/lcmtypes/: hokuyo_data_scan.c  hokuyo_data_scan.h  lidar.h
lidar/lcmtypes/cpp/lcmtypes/: lidar.hpp
lidar/lcmtypes/cpp/lcmtypes/hokuyo/: data_scan.hpp
lidar/lcmtypes/java/hokuyo/: data_scan.java
lidar/lcmtypes/python/hokuyo/: __init__.py  data_scan.py
lidar/src/: hokuyo_listener.cpp  hokuyo_publisher.cpp
matlab_simulator/: README.md  drift_sim.m  joy_sim.m  ramp_steer.m  ramp_steer_bag.m  ros_sim.m  sim_const_input.m  sol.mat  ss_cornering_val.m  ss_cornering_val.mat  testDriftCornering.m  testDriftCorneringStationary.m  testDriftCorneringSteadyState.m  testDriftCorneringSteadyState_sim.m  testDriftCornering_sim.m  testNav.m  testObs.m  testObs_ros.m  testObs_ros_sim.m  testObs_sim.m  testiLQGDriftCorneringSteadyState.m  updatevars.m  visualize_bag.m  visualize_bag_drift.m  visualize_bag_obs.m
matlab_simulator/DDP-Generator/DriftCornering/: optDefDriftCorneringStationary.mac  optDefDriftCorneringSteadyState.mac
matlab_simulator/DDP-Generator/Nav/: iLQGNav.mexa64  optDefNav.mac
matlab_simulator/DDP-Generator/Obs/: iLQGObs_ros.mexa64  optDefObs.mac  optDefObs_ros.mac
matlab_simulator/utils/: clear_traj.m  dynamics.m  iLQG.m  iLQGDriftCorneringStationary.mexa64  iLQGDriftCorneringSteadyState.mexa64  iLQGObs.mexa64  init_plot.m  init_vis.m  state_transition.m  tire_dyn_f.m  tire_dyn_r.m  update_plot.m  update_vis.m  vehicle.mat  vehicle_params.m  vis_seq.m
matlab_simulator/utils/callback_funcs/: joyCallback.m  poseCallback.m
serial_lcm_interface/: .gitignore  CMakeLists.txt  Makefile
serial_lcm_interface/lcmtypes/: data_pub.lcm  data_sub.lcm  teensy_cmd.lcm  teensy_data.lcm
serial_lcm_interface/src/: cobs.c  jordan.c  listener.c  main.c  send_message.c
teensy/: CMakeLists.txt  Makefile  README
teensy/cmake/: lcmtypes.cmake  teensy.cmake
teensy/lcmtypes/c/lcmtypes/: teensy.h
teensy/lcmtypes/cpp/lcmtypes/: teensy.hpp
teensy/src/: CMakeLists.txt  main.cpp  serial_comms.h  vehicle.cpp  vehicle.h
teensy/src/BNO055/: BNO055.cpp  BNO055.h
teensy/src/BNO055/i2c/: i2c.cpp  i2c.h
teensy/src/PWMServo/: PWMServo.cpp  PWMServo.h
teensy/src/SerialComms/: CMakeLists.txt  cobs.h
teensy_bridge/: CMakeLists.txt  README
teensy_bridge/cmake/: pods.cmake
teensy_bridge/src/: CMakeLists.txt  main.cpp
teensy_bridge/src/SerialComms/: CMakeLists.txt  serial_comms.h
test_lcm/: CMakeLists.txt  README
test_lcm/src/: listener.c  send_message.c
vmu931/: CMakeLists.txt  README
vmu931/lcmtypes/: data_wxyz.lcm
vmu931/src/: listener.c  main.c  vmu_utils.c
vmu931/udev/: 99-usb-serial.rules  README
(+150 files in other folders)
